# operator_env

./: LICENSE  pyproject.toml  requirements.txt
operador/base_llm/: chat.py  prompts.py
operador/llm/: chat.py  mcp.py  model_calling.py  prompts.py  state.py
operator/: catalog.py  config.py  io.py  utils.py
operator/llm/: chat.py  model_calling.py  prompts.py
src/: utils.py
